Implemented base of project. Actual gameplay not implemented

--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,7 +1,7 @@
 default: server
 
 server: hw2.c
-	gcc hw2.c ../libunp.a -o word_guess.out
+	gcc -g hw2.c ../libunp.a -o word_guess.out
 
 clean:
 	rm -f *.o *.out
